# draconity

./: CMakeLists.txt  run
scripts/client/: common.py  example.py  listener.py  mimic.py  status.py  unload.py
scripts/parser/: cfg.ksy  dragon_cfg.py  parsecfg.py
src/: api.h  draconity.h  maclink.c  maclink.h  phrase.c  phrase.h  server.c  server.h  shim.c
