cmake_minimum_required(VERSION 2.8.8)

project(draconity)
set(CMAKE_MACOSX_RPATH 1)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

find_package (libbson-1.0 1.8 REQUIRED)
include_directories(${BSON_INCLUDE_DIRS})
link_libraries(${BSON_LIBRARIES})
add_definitions(${BSON_DEFINITIONS})

link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
include_directories(src)
if (DEBUG)
    add_definitions(-O0 -ggdb -fsanitize=address -fno-omit-frame-pointer)
    link_directories(/Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/lib/darwin/)
else()
    add_definitions(-O2)
endif()

file(GLOB_RECURSE SOURCE src/*.c)
add_library(draconity SHARED ${SOURCE})
target_link_libraries(draconity m dl pthread zmq czmq bson-1.0)
if (DEBUG)
    target_link_libraries(draconity clang_rt.asan_osx_dynamic)
endif()
